Re-ran spurious dot removal

--- a/notebooks/5.1_overlap_noise_removal/0_setup.ipynb
+++ b/notebooks/5.1_overlap_noise_removal/0_setup.ipynb
@@ -209,118 +209,118 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15380</th>\n",
+       "      <th>15372</th>\n",
        "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3609</td>\n",
-       "      <td>8320</td>\n",
+       "      <td>130</td>\n",
+       "      <td>7953</td>\n",
+       "      <td>13126</td>\n",
        "      <td>1.0</td>\n",
        "      <td>20x</td>\n",
        "      <td>raw</td>\n",
        "      <td>a647</td>\n",
-       "      <td>155</td>\n",
-       "      <td>21.105</td>\n",
-       "      <td>366.044</td>\n",
-       "      <td>47.975</td>\n",
+       "      <td>0</td>\n",
+       "      <td>403.019</td>\n",
+       "      <td>168.955</td>\n",
+       "      <td>48.011</td>\n",
        "      <td>0.096</td>\n",
-       "      <td>1.897</td>\n",
-       "      <td>3.814</td>\n",
+       "      <td>3.811</td>\n",
+       "      <td>4.735</td>\n",
+       "      <td>-1.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.343068</td>\n",
+       "      <td>0.096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15373</th>\n",
+       "      <td>7</td>\n",
+       "      <td>154</td>\n",
+       "      <td>4829</td>\n",
+       "      <td>9065</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>0</td>\n",
+       "      <td>496.019</td>\n",
+       "      <td>181.910</td>\n",
+       "      <td>57.009</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>2.910</td>\n",
+       "      <td>3.152</td>\n",
+       "      <td>-1.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.892631</td>\n",
+       "      <td>0.096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15374</th>\n",
+       "      <td>7</td>\n",
+       "      <td>91</td>\n",
+       "      <td>8994</td>\n",
+       "      <td>16058</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>0</td>\n",
+       "      <td>276.043</td>\n",
+       "      <td>119.066</td>\n",
+       "      <td>53.006</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>3.566</td>\n",
+       "      <td>4.377</td>\n",
+       "      <td>-1.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.565668</td>\n",
+       "      <td>0.096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15375</th>\n",
+       "      <td>7</td>\n",
+       "      <td>146</td>\n",
+       "      <td>5982</td>\n",
+       "      <td>9533</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>133</td>\n",
+       "      <td>466.980</td>\n",
+       "      <td>338.996</td>\n",
+       "      <td>50.020</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>1.386</td>\n",
+       "      <td>4.998</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.541584</td>\n",
+       "      <td>0.096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15376</th>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>28173</td>\n",
+       "      <td>47852</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>126</td>\n",
+       "      <td>127.906</td>\n",
+       "      <td>290.056</td>\n",
+       "      <td>52.898</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>1.645</td>\n",
+       "      <td>4.180</td>\n",
        "      <td>1.043</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.202984</td>\n",
-       "      <td>0.096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15381</th>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5296</td>\n",
-       "      <td>10083</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>20x</td>\n",
-       "      <td>raw</td>\n",
-       "      <td>a647</td>\n",
-       "      <td>68</td>\n",
-       "      <td>46.963</td>\n",
-       "      <td>147.103</td>\n",
-       "      <td>50.968</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>1.681</td>\n",
-       "      <td>3.169</td>\n",
-       "      <td>1.074</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.160906</td>\n",
-       "      <td>0.096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15382</th>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5296</td>\n",
-       "      <td>10083</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>20x</td>\n",
-       "      <td>raw</td>\n",
-       "      <td>a647</td>\n",
-       "      <td>68</td>\n",
-       "      <td>50.958</td>\n",
-       "      <td>150.055</td>\n",
-       "      <td>50.957</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>1.418</td>\n",
-       "      <td>5.736</td>\n",
-       "      <td>1.083</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.440978</td>\n",
-       "      <td>0.096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15383</th>\n",
-       "      <td>7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>12447</td>\n",
-       "      <td>20194</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>20x</td>\n",
-       "      <td>raw</td>\n",
-       "      <td>a647</td>\n",
-       "      <td>245</td>\n",
-       "      <td>45.897</td>\n",
-       "      <td>594.047</td>\n",
-       "      <td>49.968</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>2.663</td>\n",
-       "      <td>3.663</td>\n",
-       "      <td>1.031</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.316392</td>\n",
-       "      <td>0.096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15384</th>\n",
-       "      <td>7</td>\n",
-       "      <td>80</td>\n",
-       "      <td>3724</td>\n",
-       "      <td>6789</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>20x</td>\n",
-       "      <td>raw</td>\n",
-       "      <td>a647</td>\n",
-       "      <td>70</td>\n",
-       "      <td>246.993</td>\n",
-       "      <td>190.002</td>\n",
-       "      <td>51.051</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>1.959</td>\n",
-       "      <td>6.104</td>\n",
-       "      <td>1.036</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.962329</td>\n",
+       "      <td>3.758560</td>\n",
        "      <td>0.096</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15385 rows × 19 columns</p>\n",
+       "<p>15377 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -331,11 +331,11 @@
        "3        1  111   5754         12212      1.0           20x        raw   \n",
        "4        1   84   7434         14410      1.0           20x        raw   \n",
        "...    ...  ...    ...           ...      ...           ...        ...   \n",
-       "15380    7    8   3609          8320      1.0           20x        raw   \n",
-       "15381    7   11   5296         10083      1.0           20x        raw   \n",
-       "15382    7   11   5296         10083      1.0           20x        raw   \n",
-       "15383    7   14  12447         20194      1.0           20x        raw   \n",
-       "15384    7   80   3724          6789      1.0           20x        raw   \n",
+       "15372    7  130   7953         13126      1.0           20x        raw   \n",
+       "15373    7  154   4829          9065      1.0           20x        raw   \n",
+       "15374    7   91   8994         16058      1.0           20x        raw   \n",
+       "15375    7  146   5982          9533      1.0           20x        raw   \n",
+       "15376    7   18  28173         47852      1.0           20x        raw   \n",
        "\n",
        "      Channel  Nuclei        x        y       z  Value   FWHM     SNR   NSNR  \\\n",
        "0        a647       0  404.044   15.908  56.020  0.931  3.925  13.147 -1.000   \n",
@@ -344,11 +344,11 @@
        "3        a647       0  413.027  579.941  53.188  0.808  2.856  14.646 -1.000   \n",
        "4        a647      11  320.987   49.980  55.004  0.613  1.729  14.993  1.658   \n",
        "...       ...     ...      ...      ...     ...    ...    ...     ...    ...   \n",
-       "15380    a647     155   21.105  366.044  47.975  0.096  1.897   3.814  1.043   \n",
-       "15381    a647      68   46.963  147.103  50.968  0.096  1.681   3.169  1.074   \n",
-       "15382    a647      68   50.958  150.055  50.957  0.096  1.418   5.736  1.083   \n",
-       "15383    a647     245   45.897  594.047  49.968  0.096  2.663   3.663  1.031   \n",
-       "15384    a647      70  246.993  190.002  51.051  0.096  1.959   6.104  1.036   \n",
+       "15372    a647       0  403.019  168.955  48.011  0.096  3.811   4.735 -1.000   \n",
+       "15373    a647       0  496.019  181.910  57.009  0.096  2.910   3.152 -1.000   \n",
+       "15374    a647       0  276.043  119.066  53.006  0.096  3.566   4.377 -1.000   \n",
+       "15375    a647     133  466.980  338.996  50.020  0.096  1.386   4.998  1.028   \n",
+       "15376    a647     126  127.906  290.056  52.898  0.096  1.645   4.180  1.043   \n",
        "\n",
        "       Label       SNR2  Value2  \n",
        "0          0   6.448689   0.931  \n",
@@ -357,13 +357,13 @@
        "3          0  15.489744   0.808  \n",
        "4          0  10.577747   0.613  \n",
        "...      ...        ...     ...  \n",
-       "15380      0   4.202984   0.096  \n",
-       "15381      0   2.160906   0.096  \n",
-       "15382      0   3.440978   0.096  \n",
-       "15383      0   3.316392   0.096  \n",
-       "15384      0   3.962329   0.096  \n",
+       "15372      0   4.343068   0.096  \n",
+       "15373      0   2.892631   0.096  \n",
+       "15374      0   3.565668   0.096  \n",
+       "15375      0   4.541584   0.096  \n",
+       "15376      0   3.758560   0.096  \n",
        "\n",
-       "[15385 rows x 19 columns]"
+       "[15377 rows x 19 columns]"
       ]
      },
      "execution_count": 3,
@@ -732,7 +732,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7e67b80650>]"
+       "[<matplotlib.lines.Line2D at 0x7f61d531a8d0>]"
       ]
      },
      "execution_count": 14,
