--- a/notebooks/5.1_overlap_noise_removal/2.0_20x_raw.matching_reference.field_thr.clean.ipynb
+++ b/notebooks/5.1_overlap_noise_removal/2.0_20x_raw.matching_reference.field_thr.clean.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,36 +125,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4...5"
+      "Iteration #...1...2...3"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:01<00:06,  1.14s/it]"
+      " 14%|█▍        | 1/7 [00:00<00:02,  2.28it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...6...7\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|██▊       | 2/7 [00:03<00:07,  1.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...12\n",
+      "...4...5...6...7\n",
       "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
      ]
     },
@@ -162,22 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:05<00:06,  1.51s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...13\n",
-      "Iteration #...1...2...3...4...5...6...7"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 4/7 [00:06<00:04,  1.61s/it]"
+      " 29%|██▊       | 2/7 [00:01<00:03,  1.47it/s]"
      ]
     },
     {
@@ -185,51 +155,81 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25...26...27...28...29...30...31...32...33"
+      "Iteration #...1...2...3...4...5...6...7"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:14<00:06,  3.25s/it]"
+      " 43%|████▎     | 3/7 [00:02<00:02,  1.47it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...34\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25...26...27...28...29...30...31...32...33"
+      "...8...9...10...11...12...13\n",
+      "Iteration #...1...2...3...4...5...6"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:14<00:02,  2.52s/it]"
+      " 57%|█████▋    | 4/7 [00:03<00:02,  1.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...34...35...36...37...38...39\n",
-      "Iteration #...1...2...3...4...5...6...7...8"
+      "...7\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25...26...27...28...29...30...31...32...33...34"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:14<00:00,  2.14s/it]"
+      " 71%|███████▏  | 5/7 [00:07<00:03,  1.69s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...9\n"
+      "\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 6/7 [00:07<00:01,  1.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...26...27...28...29...30...31...32...33...34...35...36...37\n",
+      "Iteration #...1...2...3...4...5...6...7"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:07<00:00,  1.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...8...9\n"
      ]
     },
     {
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6111/11197 (54.58%) 20x dots matched to 60x\n",
-      "6111/9948 (61.43%) 60x dots matched to 20x\n",
-      "3195 (28.53% 20x, 32.12% 60x) dots matched with distance > 9\n"
+      "6111/11190 (54.61%) 20x dots matched to 60x\n",
+      "6111/9944 (61.45%) 60x dots matched to 20x\n",
+      "3188 (28.49% 20x, 32.06% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -334,14 +334,14 @@
       "    1329 (47.98% 20x, 53.78% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #6\n",
-      "    465/773 (60.16%) 20x dots matched to 60x\n",
-      "    465/870 (53.45%) 60x dots matched to 20x\n",
-      "    308 (39.84% 20x, 35.40% 60x) dots matched with distance > 9\n",
+      "    465/769 (60.47%) 20x dots matched to 60x\n",
+      "    465/869 (53.51%) 60x dots matched to 20x\n",
+      "    304 (39.53% 20x, 34.98% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #7\n",
-      "    123/359 (34.26%) 20x dots matched to 60x\n",
-      "    123/904 (13.61%) 60x dots matched to 20x\n",
-      "    236 (65.74% 20x, 26.11% 60x) dots matched with distance > 9\n",
+      "    123/356 (34.55%) 20x dots matched to 60x\n",
+      "    123/901 (13.65%) 60x dots matched to 20x\n",
+      "    233 (65.45% 20x, 25.86% 60x) dots matched with distance > 9\n",
       "    \n"
      ]
     }
@@ -368,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5988/10838 (55.25%) 20x dots matched to 60x\n",
-      "5988/9044 (66.21%) 60x dots matched to 20x\n",
-      "2959 (27.30% 20x, 32.72% 60x) dots matched with distance > 9\n"
+      "5988/10834 (55.27%) 20x dots matched to 60x\n",
+      "5988/9043 (66.22%) 60x dots matched to 20x\n",
+      "2955 (27.28% 20x, 32.68% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
