Updated figures (cairo_pdf not pushed)

--- a/manuscript/2.0_figures.ipynb
+++ b/manuscript/2.0_figures.ipynb
@@ -11,19 +11,6 @@
      "text": [
       "Loading required package: cowplot\n",
       "\n",
-      "\n",
-      "********************************************************\n",
-      "\n",
-      "Note: As of version 1.0.0, cowplot does not change the\n",
-      "\n",
-      "  default ggplot2 theme anymore. To recover the previous\n",
-      "\n",
-      "  behavior, execute:\n",
-      "  theme_set(theme_cowplot())\n",
-      "\n",
-      "********************************************************\n",
-      "\n",
-      "\n",
       "Loading required package: data.table\n",
       "\n",
       "Loading required package: ggplot2\n",
@@ -51,7 +38,9 @@
     "require(data.table)\n",
     "require(ggplot2)\n",
     "require(ggpattern)\n",
-    "require(ggpubr)"
+    "require(ggpubr)\n",
+    "\n",
+    "source(\"functions/save_and_plot.R\")"
    ]
   },
   {
@@ -101,10 +90,6 @@
       "image/png": {
        "height": 1080,
        "width": 720
-      },
-      "text/plain": {
-       "height": 1080,
-       "width": 720
       }
      },
      "output_type": "display_data"
@@ -125,8 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/fig_3.png\", width=10, height=15, bg=\"white\")\n",
-    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=10, height=15, bg=\"white\")"
+    "save_and_plot(p, \"figures/fig_3\", width=10, height=15, formats=c(\"jpg\", \"png\", \"pdf\"))"
    ]
   },
   {
@@ -166,10 +150,6 @@
       "image/png": {
        "height": 960,
        "width": 960
-      },
-      "text/plain": {
-       "height": 960,
-       "width": 960
       }
      },
      "output_type": "display_data"
@@ -187,8 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/supp_fig_x1.png\", width=16, height=16, bg=\"white\")\n",
-    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=16, bg=\"white\")"
+    "save_and_plot(p, \"figures/supp_fig_x1\", width=16, height=16, formats=c(\"jpg\", \"png\", \"pdf\"))"
    ]
   },
   {
@@ -228,10 +207,6 @@
       "image/png": {
        "height": 720,
        "width": 960
-      },
-      "text/plain": {
-       "height": 720,
-       "width": 960
       }
      },
      "output_type": "display_data"
@@ -249,8 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/supp_fig_x2.png\", width=16, height=12, bg=\"white\")\n",
-    "ggsave(plot=p, file=\"figures/supp_fig_x2.jpg\", width=16, height=12, bg=\"white\")"
+    "save_and_plot(p, \"figures/supp_fig_x2\", width=16, height=12, formats=c(\"jpg\", \"png\", \"pdf\"))"
    ]
   },
   {
@@ -290,10 +264,6 @@
       "image/png": {
        "height": 720,
        "width": 960
-      },
-      "text/plain": {
-       "height": 720,
-       "width": 960
       }
      },
      "output_type": "display_data"
@@ -311,8 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/supp_fig_x3.png\", width=16, height=12, bg=\"white\")\n",
-    "ggsave(plot=p, file=\"figures/supp_fig_x3.jpg\", width=16, height=12, bg=\"white\")"
+    "save_and_plot(p, \"figures/supp_fig_x3\", width=16, height=12, formats=c(\"jpg\", \"png\", \"pdf\"))"
    ]
   }
  ],
