feat: exported F3&SFX1 single panels

--- a/manuscript/1.0_panels-F3.ipynb
+++ b/manuscript/1.0_panels-F3.ipynb
@@ -46,7 +46,8 @@
     "require(pbapply)\n",
     "pboptions(type=\"timer\")\n",
     "\n",
-    "source(\"functions/plot_scatterplot_with_density_snr_value.R\")"
+    "source(\"functions/plot_scatterplot_with_density_snr_value.R\")\n",
+    "source(\"functions/save_and_plot.R\")"
    ]
   },
   {
@@ -78,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=27s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=06s  \n"
      ]
     }
    ],
@@ -139,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"panels/fig_3e.png\", width=4, height=4)\n",
+    "save_and_plot(p, \"panels/fig_3e\", width=4, height=4, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "saveRDS(p, \"panels_rds/fig_3e.rds\")"
    ]
   },
@@ -192,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"panels/fig_3f.png\", width=4, height=4)\n",
+    "save_and_plot(p, \"panels/fig_3f\", width=4, height=4, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "saveRDS(p, \"panels_rds/fig_3f.rds\")"
    ]
   },
@@ -255,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"panels/fig_3g.png\", width=4, height=4)\n",
+    "save_and_plot(p, \"panels/fig_3g\", width=4, height=4, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "saveRDS(p, \"panels_rds/fig_3g.rds\")"
    ]
   },
@@ -314,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"panels/fig_3h.png\", width=4, height=4)\n",
+    "save_and_plot(p, \"panels/fig_3h\", width=4, height=4, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "saveRDS(p, \"panels_rds/fig_3h.rds\")"
    ]
   },
@@ -406,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"panels/fig_3i.png\", width=4, height=4)\n",
+    "save_and_plot(p, \"panels/fig_3i\", width=4, height=4, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "saveRDS(p, \"panels_rds/fig_3i.rds\")"
    ]
   }
