--- a/manuscript/1.0_panels-SFX1.ipynb
+++ b/manuscript/1.0_panels-SFX1.ipynb
@@ -38,7 +38,8 @@
     "require(pbapply)\n",
     "pboptions(type=\"timer\")\n",
     "\n",
-    "source(\"functions/plot_scatterplot_with_density_snr_value.R\")"
+    "source(\"functions/plot_scatterplot_with_density_snr_value.R\")\n",
+    "source(\"functions/save_and_plot.R\")"
    ]
   },
   {
@@ -70,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=26s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=17s  \n"
      ]
     }
    ],
@@ -124,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++                                     | 25% ~29s          "
+      "  |+++++++++++++                                     | 25% ~15s          "
      ]
     },
     {
@@ -140,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++++++++++++++                         | 50% ~16s          "
+      "  |+++++++++++++++++++++++++                         | 50% ~09s          "
      ]
     },
     {
@@ -156,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~07s          "
+      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~04s          "
      ]
     },
     {
@@ -172,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=27s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=16s  \n"
      ]
     }
    ],
@@ -221,13 +222,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=12s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=03m 15s\n"
      ]
     }
    ],
    "source": [
     "ggsave(plot=p, file=\"panels/supp_fig_x1a.png\", width=20, height=5)\n",
     "l = pblapply(1:length(plist), function(panel_id) {\n",
+    "    save_and_plot(plist[[panel_id]], sprintf(\"panels/supp_fig_x1a.%01d\", panel_id), width=5, height=5, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "    saveRDS(plist[[panel_id]], sprintf(\"panels_rds/supp_fig_x1a.%01d.rds\", panel_id))\n",
     "})"
    ]
@@ -274,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++                                     | 25% ~19s          "
+      "  |+++++++++++++                                     | 25% ~34s          "
      ]
     },
     {
@@ -290,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++++++++++++++                         | 50% ~12s          "
+      "  |+++++++++++++++++++++++++                         | 50% ~20s          "
      ]
     },
     {
@@ -306,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~05s          "
+      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~09s          "
      ]
     },
     {
@@ -322,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=21s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=36s  \n"
      ]
     }
    ],
@@ -371,13 +373,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=15s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=02m 10s\n"
      ]
     }
    ],
    "source": [
     "ggsave(plot=p, file=\"panels/supp_fig_x1b.png\", width=20, height=5)\n",
     "l = pblapply(1:length(plist), function(panel_id) {\n",
+    "    save_and_plot(plist[[panel_id]], sprintf(\"panels/supp_fig_x1b.%01d\", panel_id), width=5, height=5, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "    saveRDS(plist[[panel_id]], sprintf(\"panels_rds/supp_fig_x1b.%01d.rds\", panel_id))\n",
     "})"
    ]
@@ -424,7 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++                                     | 25% ~14s          "
+      "  |+++++++++++++                                     | 25% ~13s          "
      ]
     },
     {
@@ -440,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++++++++++++++                         | 50% ~09s          "
+      "  |+++++++++++++++++++++++++                         | 50% ~08s          "
      ]
     },
     {
@@ -476,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=17s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=14s  \n"
      ]
     }
    ],
@@ -525,13 +528,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=11s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=01m 31s\n"
      ]
     }
    ],
    "source": [
     "ggsave(plot=p, file=\"panels/supp_fig_x1c.png\", width=20, height=5)\n",
     "l = pblapply(1:length(plist), function(panel_id) {\n",
+    "    save_and_plot(plist[[panel_id]], sprintf(\"panels/supp_fig_x1c.%01d\", panel_id), width=5, height=5, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "    saveRDS(plist[[panel_id]], sprintf(\"panels_rds/supp_fig_x1c.%01d.rds\", panel_id))\n",
     "})"
    ]
@@ -584,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++                                     | 25% ~13s          "
+      "  |+++++++++++++                                     | 25% ~11s          "
      ]
     },
     {
@@ -606,7 +610,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |+++++++++++++++++++++++++                         | 50% ~08s          "
+      "  |+++++++++++++++++++++++++                         | 50% ~06s          "
      ]
     },
     {
@@ -628,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~04s          "
+      "  |++++++++++++++++++++++++++++++++++++++            | 75% ~03s          "
      ]
     },
     {
@@ -650,7 +654,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=16s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=11s  \n"
      ]
     }
    ],
@@ -699,13 +703,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=09s  \n"
+      "  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=01m 13s\n"
      ]
     }
    ],
    "source": [
     "ggsave(plot=p, file=\"panels/supp_fig_x1d.png\", width=20, height=5)\n",
     "l = pblapply(1:length(plist), function(panel_id) {\n",
+    "    save_and_plot(plist[[panel_id]], sprintf(\"panels/supp_fig_x1d.%01d\", panel_id), width=5, height=5, formats=c(\"jpg\", \"png\", \"pdf\"))\n",
     "    saveRDS(plist[[panel_id]], sprintf(\"panels_rds/supp_fig_x1d.%01d.rds\", panel_id))\n",
     "})"
    ]
